[BIB] new publi

--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -22,3 +22,28 @@
 	title= "Why apply evolutionary theory to melodies",
 	year = "2013"
 }
+
+@inproceedings{medernach2015evolutionary,
+    title={Evolutionary Progress in Heterogenous Cellular Automata (HetCA)},
+    author={Medernach, David and Fitzgerald, Jeannie and Carrignon, Simon and Ryan, Conor},
+    booktitle={Proceedings of the European Conference on Artificial Life 2015},
+    pages={512–519},
+    year={2015},
+    organization={MIT Press}
+}
+
+@article{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments
+    year={2015},
+    author = "Zibetti, Elisabetta and Carrignon, Simon and Bredeche, Nicolas",
+    doi = "10.1007/s11299-015-0173-0",
+    issn = "1593-7879",
+    journal = "Mind \& Society",
+    keywords = "Agent-based models; Resource sharing; Environmental pressures; Individual decision making; Global welfare",
+    language = "English",
+    pages = "1--22",
+    publisher = "Springer Berlin Heidelberg",
+    title = "{ACACIA-ES: an agent-based modeling and simulation tool for investigating social behaviors in resource-limited two-dimensional environments}",
+    url = "http://dx.doi.org/10.1007/s11299-015-0173-0"
+}
+
+
