--- a/doc/thesis/201508_SomeNotesAboutTheModel.tex
+++ b/doc/thesis/201508_SomeNotesAboutTheModel.tex
@@ -50,7 +50,7 @@ test with $ngoods=3$ and $n_agents=500$ and $timeStep=30000$
     \begin{tabular}{cc}
 	\includegraphics[width=3.5cm]{meanRatio.pdf}
     \end{tabular}
-    \caption{Interaction between number of agent and number of good.}
+    \caption{Change of the price of the non produced good toward optimaproduced good toward optimal.}
 \end{figure}
 
 \end{document}
