--- a/doc/administrative_doc/CV/cv_scholar2015.tex
+++ b/doc/administrative_doc/CV/cv_scholar2015.tex
@@ -31,7 +31,7 @@
 %	colorlinks,
 %	urlcolor=color1
 %}
-\setmainfont[]{Linux Libertine O}
+\setmainfont{Linux Libertine}
 % personal data
 \firstname{Simon}
 \familyname{Carrignon}
@@ -65,6 +65,7 @@
 \thispagestyle{empty}
 \pagestyle{empty}
 \section{Education}
+\cventry{since jan. 2015}{PhD Student in Biomedicine}{Universitat Pompeu Fabra}{Barcelona, Spain}{}{Study the Interaction between Culture and Economy using Computer Modelisation and Evolutionary Theory using the evolution of the Roman Empire Economy as a case study. Co-direction between Barcelona Supercomputing Center and Univ. Pompeu Fabra Complex System Lab.}
 \cventry{2011--2013}{Master Student in Logic, Philosophy, History and Sociology of Science}{Université Denis Diderot Paris 7}{Paris, France}{}{Classes in Hist., Philo. \& Socio. of Sciences. Topic of interest: Evolutionary Theory and the epistemic link btw. Evolutionary Robotics \& Evolutionary Biology. }
 \cventry{2009--2011}{Master Student in Natural \& Artificial Cognition}{École Pratique des Hautes Études}{Paris, France}{}{Classes in Cognitive Sciences with courses of Neurosciences, Cognitive Psychology \& Artificial Intelligence.}
 \cventry{2008--2009}{Exchange Student}{Université de Montréal}{Montréal, Canada}{}{One year to finish the bachelor with courses in Neurosciences, Artificial Intelligence \& Bioinformatics.}
