--- a/doc/administrative_doc/CV/cv_scholar2015.tex
+++ b/doc/administrative_doc/CV/cv_scholar2015.tex
@@ -1,15 +1,3 @@
-%        File: fv_ete2012.tex
-%     Created: mer. juil. 18 05:00  2012 E
-% Last Change: mer. juil. 18 05:00  2012 E
-%
-%% start of file `template.tex'.
-%% Copyright 2006-2012 Xavier Danaux (xdanaux@gmail.com).
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License version 1.3c,
-% available at http://www.latex-project.org/lppl/.
-
-
 \documentclass[10pt,a4paper]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
@@ -31,7 +19,7 @@
 %	colorlinks,
 %	urlcolor=color1
 %}
-\setmainfont{Linux Libertine}
+\setmainfont[]{Linux Libertine O}
 % personal data
 \firstname{Simon}
 \familyname{Carrignon}
@@ -65,7 +53,7 @@
 \thispagestyle{empty}
 \pagestyle{empty}
 \section{Education}
-\cventry{since jan. 2015}{PhD Student in Biomedicine}{Universitat Pompeu Fabra}{Barcelona, Spain}{}{Study the Interaction between Culture and Economy using Computer Modelisation and Evolutionary Theory using the evolution of the Roman Empire Economy as a case study. Co-direction between Barcelona Supercomputing Center and Univ. Pompeu Fabra Complex System Lab.}
+\cventry{since jan. 2015}{PhD Student in Biomedicine}{Universitat Pompeu Fabra}{Barcelona, Spain}{}{Study the Interaction between Culture and Economy using Computer Modelisation and Evolutionary Theory with the evolution of the Roman Empire Economy as a case study. Co-direction between Barcelona Supercomputing Center and Univ. Pompeu Fabra Complex System Lab.}
 \cventry{2011--2013}{Master Student in Logic, Philosophy, History and Sociology of Science}{Université Denis Diderot Paris 7}{Paris, France}{}{Classes in Hist., Philo. \& Socio. of Sciences. Topic of interest: Evolutionary Theory and the epistemic link btw. Evolutionary Robotics \& Evolutionary Biology. }
 \cventry{2009--2011}{Master Student in Natural \& Artificial Cognition}{École Pratique des Hautes Études}{Paris, France}{}{Classes in Cognitive Sciences with courses of Neurosciences, Cognitive Psychology \& Artificial Intelligence.}
 \cventry{2008--2009}{Exchange Student}{Université de Montréal}{Montréal, Canada}{}{One year to finish the bachelor with courses in Neurosciences, Artificial Intelligence \& Bioinformatics.}
@@ -105,7 +93,7 @@
 
 \nocite{*}
 \bibliographystyle{abbrv}
-\bibliography{/home/scarrign/projects/PhD/doc/biblio/bib/SimonCarrignon.bib}                   % 'publications' is the name of a BibTeX file
+\bibliography{../../biblio/bib/SimonCarrignon.bib}                   % 'publications' is the name of a BibTeX file
 
 \section{Languages}
 \cvitemwithcomment{French}{Mother Tongue}{}
