--- a/doc/conferences/201605_MS7/abstract.tex
+++ b/doc/conferences/201605_MS7/abstract.tex
@@ -1,18 +1,24 @@
 \documentclass[a4paper]{article}
 
 
-\title{Abstract MS7:\\ Transdisciplinarity : an ideal framework to develop and use computer simulation as heuristic to understand the past, the example of EPNEt.}
+\title{Abstract MS7:\\ Transdisciplinarity : an ideal framework to develop and use computer simulation as a heuristic tool to understand the past, the example of EPNEt.}
 \author{Simon Carrignon}
 \date{October 2015}
 
 
 \begin{document}
+\maketitle 
 
 
-Social Science, and History of social activity in particular, is a difficult task. It rely on few int and reliable source and most of the knowledge about the mechanisms at sake has to be infered from indirect data.
-We think that computer simulation are a good way to overcome such problem.  After that we will show that the problem encountered by people studying evolutionary biology are close to those encountered by arcaheologist. We will show how evolutionary biologist have embrassed mathematical and computer model to overcome such problem and propose inference similare to those done verbaly by historians. We will then spend sometime why the use of computer model is a powerfull heuristic tool in life science in general and we will finish by soutenir that interdisciplinary project are the best suited framework to implement such approach.
+Understand the social mechanims that have produced the archeological and historical artifcat we can find is somehow tricky. It rely mostly on biased and sparse hints, and most of the knowledge of such mechanisms has to be infered from indirect data.
 
-Indeed, when studying evolutionary biology, people has to reconstruct the 
+We think that computer simulation are a good way to overcome such problem.
+
+To demonstrate that we show that those problems are close to the ones encountered by evolutionary biologist and we explain how and why those biologist have embrassed mathematical and computer model to overcome such problem. We argue that the inferences they make using those model are similare to those verbaly made by historians.
+
+We then enlarge this view and describe why the use of computer model is a powerfull heuristic tool in life science in general and finish by supporting the fact that interdisciplinary project are the best suited framework to implement such approach.
+
+Indeed, the goal of evolutionary biologists is to understand the mechanisms that have lead to the living world has we can see it today. Assuming the theory of evolution as first by Darwin and si actual development, they try to reconstruct the history of living beings and explain the past events, genetical, ecological, that have generated this history. Usn he knoweldge of today's biological mechanisms and the few paleographica records that reamains 
 
 
 \end{document}
