abstract MS7 version simon avant modif ale

--- a/doc/conferences/201605_MS7/abstract.tex
+++ b/doc/conferences/201605_MS7/abstract.tex
@@ -10,15 +10,40 @@
 \maketitle 
 
 
-Understand the social mechanims that have produced the archeological and historical artifcat we can find is somehow tricky. It rely mostly on biased and sparse hints, and most of the knowledge of such mechanisms has to be infered from indirect data.
+\section{Introducion}
+Understand the social mechanisms behind the archaeological and historical artifacts that remain in our libraries and the archaeological sites we excavate is somehow tricky. It relies mostly on biased and sparse hints, and most of the knowledge of such mechanisms has to be inferred from indirect data sometime very far from the original social or cognitive process that originated it.
 
-We think that computer simulation are a good way to overcome such problem.
+We think that model and computer simulation are good tools to overcome such obstacles. To demonstrate it we show that most of the problems encountered are close to the ones that evolutionary biologist encompass when they try to reconstruct the history of living beings. We explain how biologists solved that by embracing mathematical and computer model and we argue that the inferences they do are not so different to the verbal description made by historians.
 
-To demonstrate that we show that those problems are close to the ones encountered by evolutionary biologist and we explain how and why those biologist have embrassed mathematical and computer model to overcome such problem. We argue that the inferences they make using those model are similare to those verbaly made by historians.
+After, we  generalize this view by defending the use of computer model as a powerful heuristic tool in life science in general and we finish by describing transdisciplinarity as the best suited framework to implement such approach, saying that it gives the best environment to develop model and computer simulation to help the study of past society.
 
-We then enlarge this view and describe why the use of computer model is a powerfull heuristic tool in life science in general and finish by supporting the fact that interdisciplinary project are the best suited framework to implement such approach.
+\section{Model and Evolutionary Biology }
+The goal of evolutionary biologists is to understand the mechanisms at the origin of the living world has we can see it today. Assuming the theory of evolution as it was first described by Darwin and as it is actually developed, they try to reconstruct the history of living beings. To do so they have to infer and characterize the succession of past events (genetics, biologics, ecological, environmental) that constitute this history. 
 
-Indeed, the goal of evolutionary biologists is to understand the mechanisms that have lead to the living world has we can see it today. Assuming the theory of evolution as first by Darwin and si actual development, they try to reconstruct the history of living beings and explain the past events, genetical, ecological, that have generated this history. Usn he knoweldge of today's biological mechanisms and the few paleographica records that reamains 
+But to do so, as archaeologist and historian, evolutionary biologist can rely only on the knowledge we have about a small part of today's biological mechanisms and on the scarce geological and palaeontological records.  Moreover, as shown by Gould (1980) this understanding is strongly dependent on the contingency of the biological history: the today's world don't depend only on biological rules but on the uniqueness of the succession of event, which put evolutionary biology at the same level as History (Beatty 1995).  
+
+But this historicity of evolution didn't prevent biologist to use the data available to reconstruct such history. Using maximum likelihood, Bayesian inference and other mathematical models they can reconstruct different possible succession of events and the likelihood of such possible history against the few data available.
+
+Among those model, and given the always more important emphasis put on ecological and individual to individual interaction, computer model and simulation are more and more used to palliate the lack of data and the difficulty to recreate the right condition of evolution in laboratory (Peck 2004\ldots).
+
+All this make us think that the problems encountered by biologist are the same than the one archaeologist and historian have to face. The way inferences are made about the history of living beings follow the same rules than those implicitly used by historian and archaeologist when they try to rebuild history of human society. Mathematical and computer models are a way to make some of those rules explicit and quantifiable, and infer in a statistically plausible way missing data.
+
+\section{Computer Simulation: a heuristic tool}
+But the use of computer simulation and modeling is not restricted to phylogenetic and evolutionary biology. Indeed it is now widely use in all branches of Science. People in Artificial Life (Bedau et al. 1998, 2000, Paolo et al. 2000, \ldots) argued that computer simulation are powerful heuristic tool that combine the exploratory power of thought experiment and the logical strength of mathematic. They allow to test quickly a lot of possible ``opaque though experiment'' that would be impossible to try mentally.
+Moreover, HPC allow us nowadays to statistically try a wide range of parameter of such thought experiment otherwise technically impossible (thought theoretically yes).
+
+We thus think that computer model and simulation are one of the best way to study social science and history, as they give  us a heuristic tool to test hypotheses made on very complex systems such as high scale economics activity in past society, where the interactions between every component of the system make the predictability of it very difficult to solve analytically and where those original component at the core of this activity are not anymore accessible.
+
+Moreover, as said by Winsberg (2003) who follows Hacking, Cartwright and other, Computer Simulation gives us a semi-autonomy from theory that allow us to test theory-independent assumption. This epistemological freedom is a mandatory in such fields as economy and history, that hardly fit in traditional view of theories.
+
+
+\section{Transdisciplinarity, EPNet}
+
+To build the model in a way that allow us to extract valuable knowledge from it remain a difficult task. Computer scientists havet to be really careful about every assumption they implicitly made while build computer model (the programming paradigm used, the way time and continuity are implemented,\ldots) whereas historians have to formulate their hypotheses in a very different way that they are used to. The communication between both side of the research is thus primordial. Moreover, knowledge in such journey don't lie in the mathematical model, neither in the historical data, but emerge from the well articulation of both side (``in blood and tears'', Winsberg 2009).
+
+EPNet case/description
+
+
 
 
 \end{document}
